--- a/source/_posts/虚拟内存（二）.md
+++ b/source/_posts/虚拟内存（二）.md
@@ -24,7 +24,7 @@ cover: /images/image-20210329200912702.png
 
 ### 动态内存分配
 
-<img src="../images/image-20210329200912702.png" alt="堆栈" style="zoom: 67%;" />
+<img src="/images/image-20210329200912702.png" alt="堆栈" style="zoom: 67%;" />
 
 #### 显示分配
 
@@ -32,13 +32,13 @@ c中的malloc与free，c++的new ，delete
 
 本质：维护一个内存链表来完成这些
 
-![内存链表](../images/image-20210329201606949.png)
+![内存链表](/images/image-20210329201606949.png)
 
-<img src="../images/image-20210329201628711.png" alt="内存链表结构" style="zoom:67%;" />
+<img src="/images/image-20210329201628711.png" alt="内存链表结构" style="zoom:67%;" />
 
 #### 隐式分配
 
-![垃圾回收器算法](../images/image-20210329201157596.png)
+![垃圾回收器算法](/images/image-20210329201157596.png)
 
 ​									算法：标记，定时清除
 
