--- a/source/_posts/链接.md
+++ b/source/_posts/链接.md
@@ -12,9 +12,9 @@ cover: /images/image-20210401220326403.png
 
 #### 可重定位目标文件
 
-<img src="/images/image-20210401213328902.png" alt=" " style="zoom:67%;" />
+<img src="./链接/image-20210401213328902.png" alt=" " style="zoom:67%;" />
 
-可重定向文件由ELF头对文件进行描述，将可重定向文件组进行链接，构成新的可执行文件或者链接库，这个过程中涉及到对ELF头的合并与修改，以及对于多重定义符号的解析
+可重定向文件由ELF头对文件进行描述，将可重定向文件组进行链接，构成新的可执行文件或者链接库，这个过程中涉及到对ELF头的合并与修改，以及对于多重定义符号的解
 
 **c++ 与 java 的符号重整**：
 
@@ -22,7 +22,7 @@ cover: /images/image-20210401220326403.png
 
 #### 加载可执行文件
 
-<img src="/images/image-20210401214422596.png" alt=" " style="zoom: 67%;" />
+<img src="./链接/image-20210401214422596.png" alt=" " style="zoom: 67%;" />
 
 加载可执行文件过程，由exec系统函数执行，这个过程可以简述为下：
 
@@ -50,13 +50,13 @@ cover: /images/image-20210401220326403.png
 
 动态链接在高性能服务器以及现代操作系统windows中广泛应用，以dll为主的动态链接库，大幅度提升了版本更新的痛苦，而高性能服务器中，可以将动态链接库直接加载到内存中
 
-<img src="/images/image-20210401224801659.png" alt="动态链接" style="zoom:67%;" />
+<img src="./链接/image-20210401224801659.png" alt="动态链接" style="zoom:67%;" />
 
 动态链接早期也会面临静态链接的内存分配冗余的情况
 
 因此引入了**位置无关代码**的思想：
 
-![位置无关代码](/images/image-20210401220326403.png)
+![位置无关代码](./链接/image-20210401220326403.png)
 
 **全局偏移量表GOT**：全局偏移量表GOT是一个记录动态代码地址的数组，默认为对应PLT函数的第二条指令，在GOT表中，GOT[0],GOT[1]是动态加载函数会用到的信息，GOT[2]对应加载函数
 
