--- a/source/_posts/离散数学复习.md
+++ b/source/_posts/离散数学复习.md
@@ -116,3 +116,14 @@ cover:
 
 ![image-20210706115426494](离散数学复习/image-20210706115426494.png)
 
+### 欧拉图
+
+遍历所有边，不重复
+
+每个节点的度都为偶数
+
+### 哈密顿图
+
+遍历所有点不重复
+
+只有两个节点的度为奇数，其余节点都为偶数
