--- a/source/_posts/高等数学复习.md
+++ b/source/_posts/高等数学复习.md
@@ -144,11 +144,35 @@ $\lim_{x \to 0} (1+x)^{1\over x} = e $
 
 ## 曲面积分
 
+![image-20210709190109589](高等数学复习/image-20210709190109589.png)
+
 ### 高斯公式
+
+对通量的面积分等价于对散度的体积分
+
+* 散度
+
+![image-20210709173005794](高等数学复习/image-20210709173005794.png)
+
+* 通量
+
+![image-20210709172946896](高等数学复习/image-20210709172946896.png)
+
+公式：
 
 ![image-20210705195304671](高等数学复习/image-20210705195304671.png)
 
 ### 斯托克斯公式
+
+* 环量
+
+<img src="高等数学复习/image-20210709185712135.png" alt="image-20210709185712135" style="zoom:125%;" />
+
+* 旋度
+
+![image-20210709185811732](高等数学复习/image-20210709185811732.png)
+
+公式：
 
 ![image-20210705195419890](高等数学复习/image-20210705195419890.png)
 
